--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
 </head>
 <body>
     <canvas id="gameCanvas" width="400" height="400"></canvas>
-    <script src="snake.js"></script>
+    <script src="snake_game/snake.js"></script>
 </body>
 </html>
